[project]
name = "kinship"
version = "0.1.0"
description = "Kinship recognition research project"
requires-python = "==3.11.*" # guildai requires 3.11
dependencies = [
  "guildai",
  "torch",
  "torchvision",
  "torchmetrics",
  "scikit-learn",
  "opencv-python",
  "tqdm",
  "lightning[pytorch-extra]",
  "jsonargparse[signatures]>=4.27.7",
  "pandas",
  "gdown",
  "seaborn"
]

[project.optional-dependencies]
ai = [
  "jupyter-ai",
  "langchain-openai",
  "jupyterlab",
  "jupytext",
  "openai"
]

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
