[dependency-groups]
dev = [
  "pre-commit>=4.1.0"
]
notebooks = [
  "jupyter>=1.1.1",
  "jupytext>=1.16.6",
  "scienceplots>=2.1.1"
]

[project]
name = "kinship"
version = "0.1.0"
description = "Kinship recognition research project"
requires-python = "==3.11.*" # guildai requires 3.11
dependencies = [
  "guildai",
  "torch",
  "torchvision",
  "torchmetrics",
  "scikit-learn",
  "opencv-python",
  "tqdm",
  "lightning[pytorch-extra]",
  "jsonargparse[signatures]>=4.27.7",
  "pandas",
  "gdown",
  "seaborn",
  "tabulate>=0.9.0"
]

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
